link in new tab

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Story Dice</h1>
-        <p>Roll the dice to reveal images to give you ideas for story plots, themes, characters, or more! This can be used to help brainstorming for stories, role-playing games, and more! Free images created with <a href="https://www.syncfusion.com/downloads/metrostudio?">Metro Studio</a>!</p>
+        <p>
+		Roll the dice to reveal images to give you ideas for story plots, themes, characters, or more! 
+		This can be used to help brainstorming for stories, role-playing games, and more! Free images created with 
+		<a href="https://www.syncfusion.com/downloads/metrostudio?" target="_blank">Metro Studio</a>!
+		</p>
     </div>
 </div>
 
