--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 </head> 
 
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-white">
+  <a class="navbar-brand" id="app-title">
+    <span id="app-title">
+      Story Dice
+    </span>
+  </a>
+</nav>
+
 <div class="jumbotron">
     <div class="container">
         <h1>Story Dice</h1>
@@ -30,18 +39,35 @@
     </div>
     <div class="card-deck mt-4">
         <div class="row justify-content-center" id="current_inventory">
-            <div class="card col-auto">
+            <div class="card col-auto border-dark">
                 <img class="img p-2" id="one" src="img/dice.png" alt="zombie" width="120" height="120"><br>
             </div>
-            <div class="card col-auto">
+            <div class="card col-auto border-dark">
                 <img class="img p-2" id="two" src="img/dice.png" alt="zombie" width="120" height="120"><br>
             </div>
-            <div class="card col-auto">
+            <div class="card col-auto border-dark">
                 <img class="img p-2" id="three" src="img/dice.png" alt="zombie" width="120" height="120">
             </div>
         </div>
     </div>
 </div>
+
+<div class="bg-dark mt-3">
+  <div class="row">
+    <div class="col-md-12 my-3 text-center">
+      <p class="my-0">
+        <a
+          class="btn btn-link text-white"
+		  href="https://aoti-app-hub.herokuapp.com"
+		  target="_blank"
+        >
+          see more from Adam on the Internet
+        </a>
+      </p>
+    </div>
+  </div>
+</div>
+
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
