--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
       <p class="my-0">
         <a
           class="btn btn-link text-white"
-		  href="https://aoti-app-hub.herokuapp.com"
+		  href="http://adamontheinternet.com"
 		  target="_blank"
         >
-          see more from Adam on the Internet
+          Created by Adam on the Internet
         </a>
       </p>
     </div>
